@@ -1,3 +1,15 @@
+2003-02-03  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/gnome/menus.jl (gnome-share-directory): if the
+	method of finding the gnome share directory fails, default to
+	/usr/gnome
+
+2003-01-26  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/ext/window-history.jl (window-history-key):
+	changed formatting so that some compatibility is kept with old
+	keys (except for transient windows)
+
 2003-01-15  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/ext/workspace-grid.jl (num-workspace-rows):
